--- a/csv-reader/.env
+++ b/csv-reader/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://dl8x5n2n7mh6l1wlr277:pscale_pw_7FxsBKHIL3V1M7KYz4c3URNXlfW08HBQVgWcH4bcaAx@aws.connect.psdb.cloud/db-test-trevis?ssl={"rejectUnauthorized":true}'
+DATABASE_URL='{DA NON ESPORRE IN PUBLIC REPO}'
